Projeto_iLuminar/k8s/ingress_Luminar.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-luminar
  namespace: kong
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: api-gateway-kong-proxy
            port:
              number: 80
